--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,8 @@ footer {
 }
 
 img {
-    max-width: 600px;
+    max-width: 100%;
+    width: 600px;
     border-radius: 10px;
     margin-bottom: 20px;
 }
